--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 							<path d="M27.6617245,0 C23.6258225,0 20.1656768,2.45818023 18.6933857,5.95832977 C17.2210947,2.45818023 13.760949,0 9.72542087,0 C4.68979662,0 0.54809007,3.82653606 0.0500982738,8.73093275 C0.0168240472,9.05769313 0,9.38968766 0,9.72542087 C0,21.5418839 14.5015809,27.1188686 18.6933857,35 C22.8851906,27.1192424 37.3867715,21.5422577 37.3867715,9.72542087 C37.3867715,9.38968766 37.3699474,9.05769313 37.3366732,8.73093275 C36.8383076,3.82653606 32.6969749,0 27.6617245,0 Z"></path>
 						</svg>
 						<div class="desc animation-chain" data-animation="fadeIn">
-							<p>Our first date was at Clubhouse BFD in Rochestor Hills. Gabi rushed home from work to meet me right after I got off a plane from California. This is where we realized we shared love for their sweet potato tater tots and travel. After this first weekend...our lives have never been the same!</p>
+							<p>Our first date was at Clubhouse BFD in Rochester Hills. Gabi rushed home from work to meet me right after I got off a plane from California. This is where we realized we shared a love for their sweet potato tater tots and travel. After this first weekend, our lives have never been the same!</p>
 						</div>
 					</li>
 					<li class="flex-responsive">
@@ -146,7 +146,7 @@
 							<path d="M27.6617245,0 C23.6258225,0 20.1656768,2.45818023 18.6933857,5.95832977 C17.2210947,2.45818023 13.760949,0 9.72542087,0 C4.68979662,0 0.54809007,3.82653606 0.0500982738,8.73093275 C0.0168240472,9.05769313 0,9.38968766 0,9.72542087 C0,21.5418839 14.5015809,27.1188686 18.6933857,35 C22.8851906,27.1192424 37.3867715,21.5422577 37.3867715,9.72542087 C37.3867715,9.38968766 37.3699474,9.05769313 37.3366732,8.73093275 C36.8383076,3.82653606 32.6969749,0 27.6617245,0 Z"></path>
 						</svg>
 						<div class="desc animation-chain" data-animation="fadeIn">
-							<p>So...our first trip, was to Toronto. It was on Valentine's Day & the NBA All-Star game. We may have only been there for a short time, but we wandered all around town and can't wait to go back some day. And now, Canada is our Valentine's Day tradition.</p>
+							<p>Our first trip was to Toronto. It was on Valentine's Day & the NBA All-Star game. We may have only been there for a short time, but we wandered all around town and made some amazing memories. To this day, Canada is our Valentine's Day tradition.</p>
 						</div>
 					</li>
 					<li class="flex-responsive">
@@ -174,7 +174,7 @@
 							<path d="M27.6617245,0 C23.6258225,0 20.1656768,2.45818023 18.6933857,5.95832977 C17.2210947,2.45818023 13.760949,0 9.72542087,0 C4.68979662,0 0.54809007,3.82653606 0.0500982738,8.73093275 C0.0168240472,9.05769313 0,9.38968766 0,9.72542087 C0,21.5418839 14.5015809,27.1188686 18.6933857,35 C22.8851906,27.1192424 37.3867715,21.5422577 37.3867715,9.72542087 C37.3867715,9.38968766 37.3699474,9.05769313 37.3366732,8.73093275 C36.8383076,3.82653606 32.6969749,0 27.6617245,0 Z"></path>
 						</svg>
 						<div class="desc animation-chain" data-animation="fadeIn">
-							<p>I (Jon) had this all planned out the moment Gabi told me she was going to Europe with her mom. I picked out a ring, made a little poster and grabbed my parents to suprise Gabi at the airport. We even had an extra photographer present! &#9786;</p>
+							<p>I (Jon) had this all planned out the moment Gabi told me she was going to Europe with her mom. I picked out a ring, made a little poster with "Will you marry me?" printed on it and grabbed my parents to suprise Gabi at the airport. We even had an extra photographer present!</p>
 						</div>
 					</li>
 				</ul>
