--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<head>
 				<meta charset="utf-8">
 				<meta http-equiv="X-UA-Compatible" content="IE=edge">
-				<title>Big Day</title>
+				<title>Hitched Hearsch's - Oct 14, 2017</title>
 				<meta name="description" content="">
 				<meta name="viewport" content="width=device-width, initial-scale=1">
 				<link rel="stylesheet" href="css/bootstrap.min.css">
@@ -83,7 +83,7 @@
 				<div class="flowers"></div>
 				<h2>Couple</h2>
 				<div class="section-intro">
-					<p>NEED SOMETHING!</p>
+					<p>[UPDATE]</p>
 				</div>
 				<div class="bride-and-groom flex-responsive">
 					<div class="groom">
@@ -92,7 +92,7 @@
 						</div>
 						<h3>Jonathon Hearsch</h3>
 						<h4>Groom</h4>
-						<p>NEED SOMETHING!</p>
+						<p>[UPDATE]</p>
 					</div>
 					<div class="bride">
 						<div class="profile-pic animation-chain" data-animation="fadeInUp">
@@ -100,7 +100,7 @@
 						</div>
 						<h3>Gabriela Vazquez</h3>
 						<h4>Bride</h4>
-						<p>NEED SOMETHING!</p>
+						<p>[UPDATE]</p>
 					</div>
 				</div>
 			</section>
@@ -154,13 +154,13 @@
 							<div class="timeline-thumbnail">
 								<img class="img-as-bg" src="img/placeholders/800x800.png" alt="">
 							</div>
-							<div class="date">2015</div>
+							<div class="date">[UPDATE]</div>
 						</div>
 						<svg class="heart" width="38px" height="35px" viewBox="0 0 38 35" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
 							<path d="M27.6617245,0 C23.6258225,0 20.1656768,2.45818023 18.6933857,5.95832977 C17.2210947,2.45818023 13.760949,0 9.72542087,0 C4.68979662,0 0.54809007,3.82653606 0.0500982738,8.73093275 C0.0168240472,9.05769313 0,9.38968766 0,9.72542087 C0,21.5418839 14.5015809,27.1188686 18.6933857,35 C22.8851906,27.1192424 37.3867715,21.5422577 37.3867715,9.72542087 C37.3867715,9.38968766 37.3699474,9.05769313 37.3366732,8.73093275 C36.8383076,3.82653606 32.6969749,0 27.6617245,0 Z"></path>
 						</svg>
 						<div class="desc animation-chain" data-animation="fadeIn">
-							<p>Lorem ipsum facilisis. Nostra, sociosqu quis, tempus, sollicitudin tincidunt at eu rhoncus lacus Donec felis Curabitur ullamcorper metus eu quam ornare. Eu viverra. Cras Suspendisse dapibus Aliquam mi.</p>
+							<p>[UPDATE]</p>
 						</div>
 					</li>
 					<li class="flex-responsive">
@@ -190,45 +190,9 @@
 			<section id="events" class="section-events bg-light-gray">
 				<h2>Events</h2>
 				<div class="section-intro">
-					<p>NEED SOMETHING!</p>
+					<p>[UPDATE]</p>
 				</div>
 				<ul class="event-list">
-					<!--
-					<li class="flex-responsive">
-						<div class="event-thumbnail"><img class="img-as-bg" src="img/placeholders/800x800.png" alt=""></div>
-						<div class="event-details animation-chain" data-animation="fadeInUp">
-							<h3>Wedding Ceremony</h3>
-							<ul class="event-info">
-								<li><span class="lnr lnr-map-marker"></span>ABC Hotel, 9999 Hobart St, Pittsburgh, PA, 15217</li>
-								<li><span class="lnr lnr-clock"></span>9AM - 10:30AM, Sep 15, 2016</li>
-							</ul>
-							<div class="desc">
-								<p>Lorem ipsum sit magna id efficitur Donec Nam ac augue, vehicula. Mollis mi ullamcorper. Mauris vel lorem, ultricies eu erat. Consectetur risus scelerisque.</p>
-							</div>
-							<div class="cta">
-								<a href="#" class="btn btn-primary btn-event-rsvp" data-event="wedding-ceremony">RSVP</a>
-								<a href="#" class="btn btn-primary">Get Driving Directions</a>
-							</div>
-						</div>
-					</li>
-					<li class="flex-responsive">
-						<div class="event-thumbnail"><img class="img-as-bg" src="img/placeholders/800x800.png" alt=""></div>
-						<div class="event-details animation-chain" data-animation="fadeInUp">
-							<h3>Wedding Dinner</h3>
-							<ul class="event-info">
-								<li><span class="lnr lnr-map-marker"></span>ABC Hotel, 9999 Hobart St, Pittsburgh, PA, 15217</li>
-								<li><span class="lnr lnr-clock"></span>9AM - 10:30AM, Sep 15, 2016</li>
-							</ul>
-							<div class="desc">
-								<p>Lorem ipsum sit magna id efficitur Donec Nam ac augue, vehicula. Mollis mi ullamcorper. Mauris vel lorem, ultricies eu erat. Consectetur risus scelerisque.</p>
-							</div>
-							<div class="cta">
-								<a href="#" class="btn btn-primary btn-event-rsvp" data-event="wedding-dinner">RSVP</a>
-								<a href="#" class="btn btn-primary">Get Driving Directions</a>
-							</div>
-						</div>
-					</li>
-					-->
 					<li class="flex-responsive">
 						<div class="event-thumbnail"><img class="img-as-bg" src="img/WillowickeInn.jpg" alt=""></div>
 						<div class="event-details animation-chain" data-animation="fadeInUp">
@@ -250,51 +214,10 @@
 					</li>
 				</ul>
 			</section>
-            <!--
-			<section id="rsvp" class="section-rsvp bg-light-gray">
-				<h2>RSVP</h2>
-				<div class="section-intro">
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic deserunt praesentium repellat, modi, debitis nihil quam tempore eligendi facere dolor laudantium dignissimos sequi officia, repudiandae porro aliquam fuga fugiat eveniet.</p>
-				</div>
-				<form action="php/rsvp.php" class="rsvp" name="rsvp-form" id="rsvp-form">
-					<div class="form-wrapper flex-responsive">
-						<div class="left">
-							<input type="text" placeholder="Name" name="name" id="rsvp-form-name">
-							<input type="email" placeholder="Email" name="email" id="rsvp-form-email">
-							<input type="tel" placeholder="Mobile Phone" name="mobile-phone" id="rsvp-form-mobile-phone">
-							<input type="number" placeholder="Total Number of Guests" name="number-of-guests" id="rsvp-form-number-of-guests" min="1" max="5">
-						</div>
-						<div class="right">
-							<ul class="events">
-								<li class="flex-responsive" data-event="wedding-ceremony">
-									<img class="img-as-bg" src="img/placeholders/800x800.png" alt="">
-									<p>Wedding Ceremony</p>
-								</li>
-								<li class="flex-responsive" data-event="wedding-dinner">
-									<img class="img-as-bg" src="img/placeholders/800x800.png" alt="">
-									<p>Wedding Dinner</p>
-								</li>
-								<li class="flex-responsive" data-event="wedding-party">
-									<img class="img-as-bg" src="img/placeholders/800x800.png" alt="">
-									<p>Wedding Party</p>
-								</li>
-							</ul>
-							<select multiple name="events" id="rsvp-form-events">
-								<option value="wedding-ceremony">Wedding Ceremony</option>
-								<option value="wedding-dinner">Wedding Dinner</option>
-								<option value="wedding-party">Wedding Party</option>
-							</select>
-						</div>
-					</div>
-					<input type="submit" value="Submit" class="btn btn-primary">
-				</form>
-				<div id="message"></div>
-			</section>
-            -->
 			<section id="people" class="section-people">
 				<h2>People</h2>
 				<div class="section-intro">
-					<p>Lorem ipsum Fusce ad nec accumsan erat per quam. Vitae per conubia urna iaculis. Id urna, iaculis. Tincidunt placerat lectus purus, Donec tortor.</p>
+					<p>[UPDATE]</p>
 				</div>
 				<div class="container-fluid">
 					<h3>Family</h3>
@@ -366,7 +289,6 @@
 					</div>
 				</div>
 			</section>
-
 			<section id="gallery" class="section-gallery bg-light-gray">
 				<div class="gallery-overlay">
 					<div class="gallery-modal">
@@ -561,7 +483,7 @@
 			<section id="gifts" class="section-gifts">
 				<h2>Gift Registries</h2>
 				<div class="section-intro">
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident hic culpa laudantium, adipisci quaerat magnam dicta harum vitae velit! Dicta soluta et quos consectetur iste officia est quisquam pariatur laboriosam.</p>
+					<p>[UPDATE]</p>
 				</div>
 				<div class="container-fluid retailer-list">
 					<div class="row">
