--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@
 							</a>
 						</div>
 						<div class="col-sm-6">
-							<a target="_blank" href="https://www.macys.com/wgl/registry/guest/6774512">
+							<a target="_blank" href="https://www.bedbathandbeyond.com/store/giftregistry/view_registry_guest.jsp?registryId=544560815&eventType=Wedding&pwsurl=">
 							<div class="retailer-thumbnail">
 								<img src="img/bedbathbeyond.jpg" alt="Bed Bath & Beyond">
 							</div>
