--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 						<div class="profile-pic animation-chain" data-animation="fadeInUp">
 							<img src="img/JonAus.jpg" alt="">
 						</div>
-						<h3>Jonathon Hearsch</h3>
+						<h3>Jonathon</h3>
 						<h4>Groom</h4>
 						<p>[UPDATE]</p>
 					</div>
@@ -98,7 +98,7 @@
 						<div class="profile-pic animation-chain" data-animation="fadeInUp">
 							<img src="img/GabiPhoneBooth.jpg" alt="">
 						</div>
-						<h3>Gabriela Vazquez</h3>
+						<h3>Gabriela</h3>
 						<h4>Bride</h4>
 						<p>[UPDATE]</p>
 					</div>
@@ -224,7 +224,7 @@
 					<div class="row animation-chain" data-animation="fadeInUp">
 						<div class="col-sm-3">
 							<div class="profile-pic">
-								<img class="img-as-bg" src="img/placeholders/800x800.png" alt="">
+								<img class="img-as-bg" src="img/JonDad.jpg" alt="">
 							</div>
 							<h4>Keith</h4>
 						</div>
@@ -242,7 +242,7 @@
 						</div>
 						<div class="col-sm-3">
 							<div class="profile-pic">
-								<img class="img-as-bg" src="img/placeholders/800x800.png" alt="">
+								<img class="img-as-bg" src="img/GabiMom.jpg" alt="">
 							</div>
 							<h4>Grace</h4>
 						</div>
