--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
 			<div class="preloader"></div>
 			<section id="hero" class="section-hero">
 				<div class="owl-carousel owl-full-width owl-theme">
-					<div class="item"><img src="img/placeholders/1200x800.png" alt="" class="img-as-bg"></div>
-					<div class="item"><img src="img/placeholders/1200x800.png" alt="" class="img-as-bg"></div>
-					<div class="item"><img src="img/placeholders/1200x800.png" alt="" class="img-as-bg"></div>
-					<div class="item"><img src="img/placeholders/1200x800.png" alt="" class="img-as-bg"></div>
-					<div class="item"><img src="img/placeholders/1200x800.png" alt="" class="img-as-bg"></div>
+					<div class="item"><img src="img/img_0289.jpg" alt="" class="img-as-bg"></div>
+					<div class="item"><img src="img/img_0046.jpg" alt="" class="img-as-bg"></div>
+					<div class="item"><img src="img/img_0249.jpg" alt="" class="img-as-bg"></div>
+					<div class="item"><img src="img/img_0319.jpg" alt="" class="img-as-bg"></div>
+					<div class="item"><img src="img/img_2593.jpg" alt="" class="img-as-bg"></div>
 				</div>
 				<div class="announcement-wrapper">
 					<div class="announcement animation-chain" data-animation="fadeInUp">
@@ -339,12 +339,12 @@
 						<img src="img/placeholders/1200x800.png" alt="">
 						<div class="gallery-hidden">
 							<ul class="video">
-								<li><iframe data-src="https://player.vimeo.com/video/24456787" width="640" height="360" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></li>
+								<li><iframe data-src="https://player.vimeo.com/video/215773241?title=0&byline=0&portrait=0" width="640" height="360" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></li>
 							</ul>
 							<ul class="gallery-info">
 								<li class="name-cat">
-									<h3>Sweet Memory</h3>
-									<p>Childhood</p>
+									<h3>The Proposal</h3>
+									<p>Detroit Metro Airport</p>
 								</li>
 								<li class="desc">
 									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error, dolorum impedit quisquam modi quos fuga illo maxime suscipit vitae quae tenetur, esse repellat libero architecto nesciunt voluptatibus maiores distinctio velit.</p>
