--- a/index.html
+++ b/index.html
@@ -52,11 +52,6 @@
 							</svg>
 						</div>
 					</div>
-					<!--
-					<div class="cta">
-						<a href="#events" class="btn btn-primary scroll-link">RSVP Now</a>
-					</div>
-					-->
 				</div>
 				<div class="scroll-down"></div>
 			</section>
@@ -66,25 +61,19 @@
 					<button class="open-menu">Menu</button>
 					<ul class="menu">
 						<li><a class="scroll-link" href="#hero">Home</a></li>
-						<li><a class="scroll-link" href="#couple">Couple</a></li>
-						<li><a class="scroll-link" href="#story">Story</a></li>
-						<li><a class="scroll-link" href="#events">Events</a></li>
-						<!--
-						<li><a class="scroll-link" href="#rsvp">RSVP</a></li>
-						-->
-						<li><a class="scroll-link" href="#people">People</a></li>
-						<li><a class="scroll-link" href="#gallery">Gallery</a></li>
-						<li><a class="scroll-link" href="#gifts">Gifts</a></li>
+						<li><a class="scroll-link" href="#couple">The Couple</a></li>
+						<li><a class="scroll-link" href="#story">Our Story</a></li>
+						<li><a class="scroll-link" href="#events">Our Day</a></li>
+						<li><a class="scroll-link" href="#people">Our People</a></li>
+						<li><a class="scroll-link" href="#gallery">Our Life</a></li>
+						<li><a class="scroll-link" href="#gifts">Our Registries</a></li>
 					</ul>
 				</div>
 			</nav>
 
 			<section id="couple" class="section-couple">
 				<div class="flowers"></div>
-				<h2>Couple</h2>
-				<div class="section-intro">
-					<p>[UPDATE]</p>
-				</div>
+				<h2>The Couple</h2>
 				<div class="bride-and-groom flex-responsive">
 					<div class="groom">
 						<div class="profile-pic animation-chain" data-animation="fadeInUp">
@@ -119,7 +108,7 @@
 			</div>
 
 			<section id="story" class="section-story">
-				<h2>Story</h2>
+				<h2>Our Story</h2>
 				<ul class="timeline">
 					<li class="flex-responsive">
 						<div class="meta">
@@ -154,7 +143,7 @@
 							<div class="timeline-thumbnail">
 								<img class="img-as-bg" src="img/placeholders/800x800.png" alt="">
 							</div>
-							<div class="date">[UPDATE]</div>
+							<div class="date">London</div>
 						</div>
 						<svg class="heart" width="38px" height="35px" viewBox="0 0 38 35" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
 							<path d="M27.6617245,0 C23.6258225,0 20.1656768,2.45818023 18.6933857,5.95832977 C17.2210947,2.45818023 13.760949,0 9.72542087,0 C4.68979662,0 0.54809007,3.82653606 0.0500982738,8.73093275 C0.0168240472,9.05769313 0,9.38968766 0,9.72542087 C0,21.5418839 14.5015809,27.1188686 18.6933857,35 C22.8851906,27.1192424 37.3867715,21.5422577 37.3867715,9.72542087 C37.3867715,9.38968766 37.3699474,9.05769313 37.3366732,8.73093275 C36.8383076,3.82653606 32.6969749,0 27.6617245,0 Z"></path>
@@ -188,10 +177,7 @@
 			</div>
 
 			<section id="events" class="section-events bg-light-gray">
-				<h2>Events</h2>
-				<div class="section-intro">
-					<p>[UPDATE]</p>
-				</div>
+				<h2>Our Day</h2>
 				<ul class="event-list">
 					<li class="flex-responsive">
 						<div class="event-thumbnail"><img class="img-as-bg" src="img/WillowickeInn.jpg" alt=""></div>
@@ -215,10 +201,7 @@
 				</ul>
 			</section>
 			<section id="people" class="section-people">
-				<h2>People</h2>
-				<div class="section-intro">
-					<p>[UPDATE]</p>
-				</div>
+				<h2>Our People</h2>
 				<div class="container-fluid">
 					<h3>Family</h3>
 					<div class="row animation-chain" data-animation="fadeInUp">
@@ -306,7 +289,7 @@
 					</div>
 				</div>
 				<header class="flex-responsive">
-					<h2 class="">Gallery</h2>
+					<h2 class="">Our Life</h2>
 					<ul class="gallery-cats">
 						<li><a href="#" data-cat="*" class="current">All</a></li>
 						<li><a href="#" data-cat="bride-groom">Bride & Groom</a></li>
@@ -481,10 +464,7 @@
 			</section>
 
 			<section id="gifts" class="section-gifts">
-				<h2>Gift Registries</h2>
-				<div class="section-intro">
-					<p>[UPDATE]</p>
-				</div>
+				<h2>Our Registries</h2>
 				<div class="container-fluid retailer-list">
 					<div class="row">
 						<div class="col-sm-6">						
