--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
 			<div class="preloader"></div>
 			<section id="hero" class="section-hero">
 				<div class="owl-carousel owl-full-width owl-theme">
-					<div class="item"><img src="img/img_0289.jpg" alt="" class="img-as-bg"></div>
-					<div class="item"><img src="img/img_0046.jpg" alt="" class="img-as-bg"></div>
-					<div class="item"><img src="img/img_0249.jpg" alt="" class="img-as-bg"></div>
-					<div class="item"><img src="img/img_0319.jpg" alt="" class="img-as-bg"></div>
-					<div class="item"><img src="img/img_2593.jpg" alt="" class="img-as-bg"></div>
+					<div class="item"><img src="img/IMG_0289.jpg" alt="" class="img-as-bg"></div>
+					<div class="item"><img src="img/IMG_0046.jpg" alt="" class="img-as-bg"></div>
+					<div class="item"><img src="img/IMG_0249.jpg" alt="" class="img-as-bg"></div>
+					<div class="item"><img src="img/IMG_0319.jpg" alt="" class="img-as-bg"></div>
+					<div class="item"><img src="img/IMG_2593.jpg" alt="" class="img-as-bg"></div>
 				</div>
 				<div class="announcement-wrapper">
 					<div class="announcement animation-chain" data-animation="fadeInUp">
