--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 					<li class="flex-responsive">
 						<div class="meta">
 							<div class="timeline-thumbnail">
-								<img class="img-as-bg" src="img/placeholders/800x800.png" alt="">
+								<img class="img-as-bg" src="img/IMG_0115.jpg" alt="">
 							</div>
 							<div class="date">London</div>
 						</div>
@@ -149,7 +149,7 @@
 							<path d="M27.6617245,0 C23.6258225,0 20.1656768,2.45818023 18.6933857,5.95832977 C17.2210947,2.45818023 13.760949,0 9.72542087,0 C4.68979662,0 0.54809007,3.82653606 0.0500982738,8.73093275 C0.0168240472,9.05769313 0,9.38968766 0,9.72542087 C0,21.5418839 14.5015809,27.1188686 18.6933857,35 C22.8851906,27.1192424 37.3867715,21.5422577 37.3867715,9.72542087 C37.3867715,9.38968766 37.3699474,9.05769313 37.3366732,8.73093275 C36.8383076,3.82653606 32.6969749,0 27.6617245,0 Z"></path>
 						</svg>
 						<div class="desc animation-chain" data-animation="fadeIn">
-							<p>[UPDATE]</p>
+							<p>[GABI TO WRITE]</p>
 						</div>
 					</li>
 					<li class="flex-responsive">
@@ -186,6 +186,26 @@
 							<ul class="event-info">
 								<li><span class="lnr lnr-map-marker"></span>Willowicke Inn, 251 Noble Rd, Williamston, MI</li>
 								<li><span class="lnr lnr-clock"></span>4:00PM - 11:00PM, October 14, 2017</li>
+							</ul>
+							<div class="desc">
+								<p>The blessing will begin on the grounds of Willowick Inn at 4:00PM with dinner to follow.</p>
+							</div>
+							<div class="cta">
+								<!--
+								<a href="#" class="btn btn-primary btn-event-rsvp" data-event="wedding-party">RSVP</a>
+								-->
+								<a href="https://goo.gl/maps/eHrv2NfrZLN2" class="btn btn-primary">Get Driving Directions</a>
+							</div>
+						</div>
+					</li>
+					<li class="flex-responsive">
+						<div class="event-thumbnail"><img class="img-as-bg" src="img/hotels.jpg" alt=""></div>
+						<div class="event-details animation-chain" data-animation="fadeInUp">
+							<h3>Hotels</h3>
+							<ul class="event-info">
+								<li><span class="lnr lnr-map-marker"></span>Willowicke Inn, 251 Noble Rd, Williamston, MI</li>
+								<li><span class="lnr lnr-map-marker"></span>Willowicke Inn, 251 Noble Rd, Williamston, MI</li>
+								<li><span class="lnr lnr-map-marker"></span>Willowicke Inn, 251 Noble Rd, Williamston, MI</li>
 							</ul>
 							<div class="desc">
 								<p>The blessing will begin on the grounds of Willowick Inn at 4:00PM with dinner to follow.</p>
