--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
 			<div class="preloader"></div>
 			<section id="hero" class="section-hero">
 				<div class="owl-carousel owl-full-width owl-theme">
-					<div class="item"><img src="img/IMG_0289.jpg" alt="" class="img-as-bg"></div>
-					<div class="item"><img src="img/IMG_0046.jpg" alt="" class="img-as-bg"></div>
-					<div class="item"><img src="img/IMG_0249.jpg" alt="" class="img-as-bg"></div>
-					<div class="item"><img src="img/IMG_0319.jpg" alt="" class="img-as-bg"></div>
-					<div class="item"><img src="img/IMG_2593.jpg" alt="" class="img-as-bg"></div>
+					<div class="item"><img src="img/header/1.jpg" alt="" class="img-as-bg"></div>
+					<div class="item"><img src="img/header/2.jpg" alt="" class="img-as-bg"></div>
+					<div class="item"><img src="img/header/3.jpg" alt="" class="img-as-bg"></div>
+					<div class="item"><img src="img/header/4.jpg" alt="" class="img-as-bg"></div>
+					<div class="item"><img src="img/header/5.jpg" alt="" class="img-as-bg"></div>
 				</div>
 				<div class="announcement-wrapper">
 					<div class="announcement animation-chain" data-animation="fadeInUp">
@@ -77,19 +77,17 @@
 				<div class="bride-and-groom flex-responsive">
 					<div class="groom">
 						<div class="profile-pic animation-chain" data-animation="fadeInUp">
-							<img src="img/JonAus.jpg" alt="">
+							<img src="img/groom.jpg" alt="">
 						</div>
 						<h3>Jonathon</h3>
 						<h4>Groom</h4>
-						<p>[UPDATE]</p>
 					</div>
 					<div class="bride">
 						<div class="profile-pic animation-chain" data-animation="fadeInUp">
-							<img src="img/GabiPhoneBooth.jpg" alt="">
+							<img src="img/bride.jpg" alt="">
 						</div>
 						<h3>Gabriela</h3>
 						<h4>Bride</h4>
-						<p>[UPDATE]</p>
 					</div>
 				</div>
 			</section>
@@ -97,12 +95,12 @@
 			<div class="separator">
 				<div class="separator-carousel">
 					<div class="owl-carousel owl-theme">
-						<a href="img/IMG_0249.jpg" class="item"><img src="img/IMG_0249.jpg" alt="" class="img-as-bg"></a>
-						<a href="img/IMG_0342.jpg" class="item"><img src="img/IMG_0342.jpg" alt="" class="img-as-bg"></a>
-						<a href="img/IMG_0249.jpg" class="item"><img src="img/IMG_0249.jpg" alt="" class="img-as-bg"></a>
-						<a href="img/IMG_0342.jpg" class="item"><img src="img/IMG_0342.jpg" alt="" class="img-as-bg"></a>
-						<a href="img/IMG_0249.jpg" class="item"><img src="img/IMG_0249.jpg" alt="" class="img-as-bg"></a>
-						<a href="img/IMG_0342.jpg" class="item"><img src="img/IMG_0342.jpg" alt="" class="img-as-bg"></a>
+						<a href="img/placeholders/800x800.png" class="item"><img src="img/placeholders/800x800.png" alt="" class="img-as-bg"></a>
+						<a href="img/placeholders/800x800.png" class="item"><img src="img/placeholders/800x800.png" alt="" class="img-as-bg"></a>
+						<a href="img/placeholders/800x800.png" class="item"><img src="img/placeholders/800x800.png" alt="" class="img-as-bg"></a>
+						<a href="img/placeholders/800x800.png" class="item"><img src="img/placeholders/800x800.png" alt="" class="img-as-bg"></a>
+						<a href="img/placeholders/800x800.png" class="item"><img src="img/placeholders/800x800.png" alt="" class="img-as-bg"></a>
+						<a href="img/placeholders/800x800.png" class="item"><img src="img/placeholders/800x800.png" alt="" class="img-as-bg"></a>
 					</div>
 				</div>
 			</div>
@@ -113,7 +111,7 @@
 					<li class="flex-responsive">
 						<div class="meta">
 							<div class="timeline-thumbnail">
-								<img class="img-as-bg" src="img/Clubhouse.png" alt="">
+								<img class="img-as-bg" src="img/timeline/clubhouse.png" alt="">
 							</div>
 							<div class="date">First Date</div>
 						</div>
@@ -127,7 +125,7 @@
 					<li class="flex-responsive">
 						<div class="meta">
 							<div class="timeline-thumbnail">
-								<img class="img-as-bg" src="img/Toronto.jpg" alt="">
+								<img class="img-as-bg" src="img/timeline/toronto.jpg" alt="">
 							</div>
 							<div class="date">First Trip</div>
 						</div>
@@ -141,7 +139,7 @@
 					<li class="flex-responsive">
 						<div class="meta">
 							<div class="timeline-thumbnail">
-								<img class="img-as-bg" src="img/IMG_0115.jpg" alt="">
+								<img class="img-as-bg" src="img/timeline/london.jpg" alt="">
 							</div>
 							<div class="date">London</div>
 						</div>
@@ -155,7 +153,7 @@
 					<li class="flex-responsive">
 						<div class="meta">
 							<div class="timeline-thumbnail">
-								<img class="img-as-bg" src="img/Engagement.jpg" alt="">
+								<img class="img-as-bg" src="img/timeline/engagement.jpg" alt="">
 							</div>
 							<div class="date">Engagement</div>
 						</div>
@@ -169,7 +167,7 @@
 				</ul>
 			</section>
 
-			<div class="separator parallax" data-background-image="img/IMG_0249.jpg" data-parallax-factor=".8">
+			<div class="separator parallax" data-background-image="img/placeholders/1200x800.png" data-parallax-factor=".8">
 				<div class="flowers"></div>
 				<h2 data-after-countdown="We got married on Sep 16, 2016.">Counting Down to Our Big Day</h2>
 				<div class="decor"><i class="fa fa-heart-o"></i></div>
@@ -180,7 +178,7 @@
 				<h2>Our Day</h2>
 				<ul class="event-list">
 					<li class="flex-responsive">
-						<div class="event-thumbnail"><img class="img-as-bg" src="img/WillowickeInn.jpg" alt=""></div>
+						<div class="event-thumbnail"><img class="img-as-bg" src="img/events/willowickeinn.jpg" alt=""></div>
 						<div class="event-details animation-chain" data-animation="fadeInUp">
 							<h3>Wedding Blessing & Reception</h3>
 							<ul class="event-info">
@@ -199,22 +197,16 @@
 						</div>
 					</li>
 					<li class="flex-responsive">
-						<div class="event-thumbnail"><img class="img-as-bg" src="img/hotels.jpg" alt=""></div>
+						<div class="event-thumbnail"><img class="img-as-bg" src="img/events/hotels.jpg" alt=""></div>
 						<div class="event-details animation-chain" data-animation="fadeInUp">
 							<h3>Hotels</h3>
 							<ul class="event-info">
-								<li><span class="lnr lnr-map-marker"></span>Willowicke Inn, 251 Noble Rd, Williamston, MI</li>
-								<li><span class="lnr lnr-map-marker"></span>Willowicke Inn, 251 Noble Rd, Williamston, MI</li>
-								<li><span class="lnr lnr-map-marker"></span>Willowicke Inn, 251 Noble Rd, Williamston, MI</li>
+								<li><span class="lnr lnr-apartment"></span>TBD <a href="#">[Click Here]</a></li>
+								<li><span class="lnr lnr-apartment"></span>TBD <a href="#">[Click Here]</a></li>
+								<li><span class="lnr lnr-map-marker"></span>TBD <a href="#">[Click Here]</a></li>
 							</ul>
 							<div class="desc">
-								<p>The blessing will begin on the grounds of Willowick Inn at 4:00PM with dinner to follow.</p>
-							</div>
-							<div class="cta">
-								<!--
-								<a href="#" class="btn btn-primary btn-event-rsvp" data-event="wedding-party">RSVP</a>
-								-->
-								<a href="https://goo.gl/maps/eHrv2NfrZLN2" class="btn btn-primary">Get Driving Directions</a>
+								<p>TBD</p>
 							</div>
 						</div>
 					</li>
@@ -227,7 +219,7 @@
 					<div class="row animation-chain" data-animation="fadeInUp">
 						<div class="col-sm-3">
 							<div class="profile-pic">
-								<img class="img-as-bg" src="img/JonDad.jpg" alt="">
+								<img class="img-as-bg" src="img/people/keith.jpg" alt="">
 							</div>
 							<h4>Keith</h4>
 						</div>
@@ -239,13 +231,13 @@
 						</div>
 						<div class="col-sm-3">
 							<div class="profile-pic">
-								<img class="img-as-bg" src="img/GabiDad.jpg" alt="">
+								<img class="img-as-bg" src="img/people/charles.jpg" alt="">
 							</div>
 							<h4>Charles</h4>
 						</div>
 						<div class="col-sm-3">
 							<div class="profile-pic">
-								<img class="img-as-bg" src="img/GabiMom.jpg" alt="">
+								<img class="img-as-bg" src="img/people/grace.jpg" alt="">
 							</div>
 							<h4>Grace</h4>
 						</div>
@@ -515,17 +507,6 @@
 				</div>
 				<h2>Save the date</h2>
 				<h3>Jonathon & Gabriela</h3>
-				<!--
-				<ul class="social">
-					<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-					<li><a href="#"><i class="fa fa-instagram"></i></a></li>
-					<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-					<li><a href="#"><i class="fa fa-tumblr"></i></a></li>
-					<li><a href="#"><i class="fa fa-youtube"></i></a></li>
-					<li><a href="#"><i class="fa fa-vimeo"></i></a></li>
-					<li><a href="#"><i class="fa fa-flickr"></i></a></li>
-				</ul>
-				-->
 				<p>Copyright 2017. All rights reserved.</p>
 				<a href="#hero" class="scroll-link scroll-up"><i class="fa fa-arrow-up"></i></a>
 			</footer>
@@ -543,13 +524,15 @@
 			<script src="js/main.js"></script>
 
 			<!-- Google Analytics: uncomment the code below and change UA-XXXXX-X to be your site's ID. -->
-			<!-- <script>
-					(function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-					function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-					e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-					e.src='//www.google-analytics.com/analytics.js';
-					r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-					ga('create','UA-XXXXX-X','auto');ga('send','pageview');
-			</script> -->
+			<script>
+			  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+			  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+			  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+			  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+			  ga('create', 'UA-98550577-1', 'auto');
+			  ga('send', 'pageview');
+
+			</script>
 		</body>
 </html>
