--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 				<meta charset="utf-8">
 				<meta http-equiv="X-UA-Compatible" content="IE=edge">
 				<title>Hitched Hearsch's - Oct 14, 2017</title>
-				<meta name="description" content="">
+				<meta name="description" content="Celebrating the wedding of Gabriela and Jonathon!">
 				<meta name="viewport" content="width=device-width, initial-scale=1">
 				<link rel="stylesheet" href="css/bootstrap.min.css">
 				<link href="https://fonts.googleapis.com/css?family=Dancing+Script:400,700%7CFira+Sans:400,400i,700,700i&subset=latin-ext" rel="stylesheet">
@@ -95,12 +95,14 @@
 			<div class="separator">
 				<div class="separator-carousel">
 					<div class="owl-carousel owl-theme">
-						<a href="img/placeholders/800x800.png" class="item"><img src="img/placeholders/800x800.png" alt="" class="img-as-bg"></a>
-						<a href="img/placeholders/800x800.png" class="item"><img src="img/placeholders/800x800.png" alt="" class="img-as-bg"></a>
-						<a href="img/placeholders/800x800.png" class="item"><img src="img/placeholders/800x800.png" alt="" class="img-as-bg"></a>
-						<a href="img/placeholders/800x800.png" class="item"><img src="img/placeholders/800x800.png" alt="" class="img-as-bg"></a>
-						<a href="img/placeholders/800x800.png" class="item"><img src="img/placeholders/800x800.png" alt="" class="img-as-bg"></a>
-						<a href="img/placeholders/800x800.png" class="item"><img src="img/placeholders/800x800.png" alt="" class="img-as-bg"></a>
+						<a href="img/carousel/1.jpg" class="item"><img src="img/carousel/1.jpg" alt="" class="img-as-bg"></a>
+						<a href="img/carousel/2.jpg" class="item"><img src="img/carousel/2.jpg" alt="" class="img-as-bg"></a>
+						<a href="img/carousel/3.jpg" class="item"><img src="img/carousel/3.jpg" alt="" class="img-as-bg"></a>
+						<a href="img/carousel/4.jpg" class="item"><img src="img/carousel/4.jpg" alt="" class="img-as-bg"></a>
+						<a href="img/carousel/5.png" class="item"><img src="img/carousel/5.png" alt="" class="img-as-bg"></a>
+						<a href="img/carousel/6.jpg" class="item"><img src="img/carousel/6.jpg" alt="" class="img-as-bg"></a>
+						<a href="img/carousel/7.jpg" class="item"><img src="img/carousel/7.jpg" alt="" class="img-as-bg"></a>
+						<a href="img/carousel/8.jpg" class="item"><img src="img/carousel/8.jpg" alt="" class="img-as-bg"></a>
 					</div>
 				</div>
 			</div>
@@ -147,7 +149,7 @@
 							<path d="M27.6617245,0 C23.6258225,0 20.1656768,2.45818023 18.6933857,5.95832977 C17.2210947,2.45818023 13.760949,0 9.72542087,0 C4.68979662,0 0.54809007,3.82653606 0.0500982738,8.73093275 C0.0168240472,9.05769313 0,9.38968766 0,9.72542087 C0,21.5418839 14.5015809,27.1188686 18.6933857,35 C22.8851906,27.1192424 37.3867715,21.5422577 37.3867715,9.72542087 C37.3867715,9.38968766 37.3699474,9.05769313 37.3366732,8.73093275 C36.8383076,3.82653606 32.6969749,0 27.6617245,0 Z"></path>
 						</svg>
 						<div class="desc animation-chain" data-animation="fadeIn">
-							<p>[GABI TO WRITE]</p>
+						  <p>Our first international adventure across the pond was memorable and exhausting. Even though it was a work trip for Jon, we packed in all the major sites and more. We miss this fish &amp; chips! This trip sparked our desire to the whole world together.</p>
 						</div>
 					</li>
 					<li class="flex-responsive">
@@ -167,7 +169,7 @@
 				</ul>
 			</section>
 
-			<div class="separator parallax" data-background-image="img/placeholders/1200x800.png" data-parallax-factor=".8">
+			<div class="separator parallax" data-background-image="img/willowickehouse.png" data-parallax-factor=".8">
 				<div class="flowers"></div>
 				<h2 data-after-countdown="We got married on Sep 16, 2016.">Counting Down to Our Big Day</h2>
 				<div class="decor"><i class="fa fa-heart-o"></i></div>
@@ -201,12 +203,17 @@
 						<div class="event-details animation-chain" data-animation="fadeInUp">
 							<h3>Hotels</h3>
 							<ul class="event-info">
+							<!--
 								<li><span class="lnr lnr-apartment"></span>TBD <a href="#">[Click Here]</a></li>
 								<li><span class="lnr lnr-apartment"></span>TBD <a href="#">[Click Here]</a></li>
 								<li><span class="lnr lnr-map-marker"></span>TBD <a href="#">[Click Here]</a></li>
+							-->
 							</ul>
 							<div class="desc">
-								<p>TBD</p>
+							  <p>We are working on finding the best deals near the venue. Check back soon! </p>
+							  <p>&nbsp;</p>
+							  <p>&nbsp;</p>
+							  <p>&nbsp;</p>
 							</div>
 						</div>
 					</li>
@@ -248,13 +255,13 @@
 						</div>
 						<div class="col-sm-3">
 							<div class="profile-pic">
-								<img class="img-as-bg" src="img/placeholders/800x800.png" alt="">
+								<img class="img-as-bg" src="img/people/lauren.jpg" alt="">
 							</div>
 							<h4>Genevieve</h4>
 						</div>
 						<div class="col-sm-3">
 							<div class="profile-pic">
-								<img class="img-as-bg" src="img/placeholders/800x800.png" alt="">
+								<img class="img-as-bg" src="img/people/gen.jpg" alt="">
 							</div>
 							<h4>Lauren</h4>
 						</div>
@@ -268,15 +275,15 @@
 						</div>
 						<div class="col-sm-3">
 							<div class="profile-pic">
-								<img class="img-as-bg" src="img/placeholders/800x800.png" alt="">
+								<img class="img-as-bg" src="img/people/steve.jpg" alt="">
 							</div>
-							<h4>TBD</h4>
+							<h4>Steve</h4>
 						</div>
 						<div class="col-sm-3">
 							<div class="profile-pic">
-								<img class="img-as-bg" src="img/placeholders/800x800.png" alt="">
+								<img class="img-as-bg" src="img/people/thomas.jpg" alt="">
 							</div>
-							<h4>TBD</h4>
+							<h4>Thomas</h4>
 						</div>
 						<div class="col-sm-3">
 							
