--- a/index.html
+++ b/index.html
@@ -249,26 +249,26 @@
 							<h4>Grace</h4>
 						</div>
 					</div>
-					<h3>Bridesmaids</h3>
+					<h3>Maid/Matron of Honor</h3>
 					<div class="row animation-chain" data-animation="fadeInUp">
 						<div class="col-sm-3">							
 						</div>
 						<div class="col-sm-3">
 							<div class="profile-pic">
-								<img class="img-as-bg" src="img/people/lauren.jpg" alt="">
+								<img class="img-as-bg" src="img/people/gen.jpg" alt="">
 							</div>
 							<h4>Genevieve</h4>
 						</div>
 						<div class="col-sm-3">
 							<div class="profile-pic">
-								<img class="img-as-bg" src="img/people/gen.jpg" alt="">
+								<img class="img-as-bg" src="img/people/lauren.jpg" alt="">
 							</div>
 							<h4>Lauren</h4>
 						</div>
 						<div class="col-sm-3">		
 						</div>
 					</div>
-					<h3>Groomsmen</h3>
+					<h3>Best Men</h3>
 					<div class="row animation-chain" data-animation="fadeInUp">
 						<div class="col-sm-3">
 							
