Lots of updates!

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
 			<section id="people" class="section-people">
 				<h2>Our People</h2>
 				<div class="container-fluid">
-					<h3>Family</h3>
+					<h3>Our Family</h3>
 					<div class="row animation-chain" data-animation="fadeInUp">
 						<div class="col-sm-3">
 							<div class="profile-pic">
@@ -232,7 +232,7 @@
 						</div>
 						<div class="col-sm-3">
 							<div class="profile-pic">
-								<img class="img-as-bg" src="img/placeholders/800x800.png" alt="">
+								<img class="img-as-bg" src="https://placeholdit.imgix.net/~text?txtsize=120&txt=Coming+Soon!&w=800&h=800" alt="">
 							</div>
 							<h4>Freda</h4>
 						</div>
@@ -251,8 +251,7 @@
 					</div>
 					<h3>Maid/Matron of Honor</h3>
 					<div class="row animation-chain" data-animation="fadeInUp">
-						<div class="col-sm-3">							
-						</div>
+						<div class="col-sm-3"></div>
 						<div class="col-sm-3">
 							<div class="profile-pic">
 								<img class="img-as-bg" src="img/people/gen.jpg" alt="">
@@ -265,14 +264,11 @@
 							</div>
 							<h4>Lauren</h4>
 						</div>
-						<div class="col-sm-3">		
-						</div>
+						<div class="col-sm-3"></div>
 					</div>
 					<h3>Best Men</h3>
 					<div class="row animation-chain" data-animation="fadeInUp">
-						<div class="col-sm-3">
-							
-						</div>
+						<div class="col-sm-3"></div>
 						<div class="col-sm-3">
 							<div class="profile-pic">
 								<img class="img-as-bg" src="img/people/steve.jpg" alt="">
@@ -285,9 +281,7 @@
 							</div>
 							<h4>Thomas</h4>
 						</div>
-						<div class="col-sm-3">
-							
-						</div>
+						<div class="col-sm-3"></div>
 					</div>
 				</div>
 			</section>
@@ -319,26 +313,24 @@
 				</header>
 				<div class="gallery-grid animation-chain" data-animation="zoomIn">
 					<div class="gallery-grid-item bride-groom">
-						<img src="img/placeholders/1200x800.png" alt="">
+						<img src="https://placeholdit.imgix.net/~text?txtsize=120&txt=Coming+Soon!&w=1200&h=800" alt="">
 						<div class="gallery-hidden">
 							<ul class="image-list">
-								<li><img src="img/blank.png" data-src="http://placehold.it/1200x800" alt=""></li>
-								<li><img src="img/blank.png" data-src="http://placehold.it/1200x800" alt=""></li>
-								<li><img src="img/blank.png" data-src="http://placehold.it/1200x800" alt=""></li>
+								<li><img src="img/blank.png" data-src="https://placeholdit.imgix.net/~text?txtsize=120&txt=Coming+Soon!&w=1200&h=800" alt=""></li>
 							</ul>
 							<ul class="gallery-info">
 								<li class="name-cat">
-									<h3>Sweet Memory</h3>
-									<p>Childhood</p>
+									<h3>Coming Soon!</h3>
+									<p></p>
 								</li>
 								<li class="desc">
-									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque dolorem deleniti numquam magnam quos expedita, amet officiis. Provident, minima, qui earum, hic eveniet tenetur dignissimos corrupti cumque sequi dolorum sapiente!</p>
+									<p></p>
 								</li>
 							</ul>
 						</div>
 					</div>
-					<div class="gallery-grid-item family">
-						<img src="img/placeholders/1200x800.png" alt="">
+					<div class="gallery-grid-item bride-groom">
+						<img src="img/gallery/proposal.jpg" alt="">
 						<div class="gallery-hidden">
 							<ul class="video">
 								<li><iframe data-src="https://player.vimeo.com/video/215773241?title=0&byline=0&portrait=0" width="640" height="360" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></li>
@@ -349,132 +341,26 @@
 									<p>Detroit Metro Airport</p>
 								</li>
 								<li class="desc">
-									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error, dolorum impedit quisquam modi quos fuga illo maxime suscipit vitae quae tenetur, esse repellat libero architecto nesciunt voluptatibus maiores distinctio velit.</p>
-								</li>
-							</ul>
-						</div>
-					</div>
-					<div class="gallery-grid-item dinner">
-						<img src="img/placeholders/1200x800.png" alt="">
-						<div class="gallery-hidden">
-							<ul class="video">
-								<li><iframe width="560" height="315" data-src="http://www.youtube.com/embed/5aOSxep4ni0?rel=0&showinfo=0&autohide=1&modestbranding=1" allowfullscreen></iframe></li>
-							</ul>
-							<ul class="gallery-info">
-								<li class="name-cat">
-									<h3>Sweet Memory</h3>
-									<p>Childhood</p>
-								</li>
-								<li class="desc">
-									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque expedita porro, numquam omnis. Temporibus consequatur assumenda a quasi eligendi amet natus porro tempore minima, corporis, hic ad vel! Tempore, iure.</p>
-								</li>
-							</ul>
-						</div>
-					</div>
-					<div class="gallery-grid-item party">
-						<img src="img/placeholders/1200x800.png" alt="">
-						<div class="gallery-hidden">
-							<ul class="video">
-								<li><iframe width="560" height="315" data-src="http://www.youtube.com/embed/5aOSxep4ni0?rel=0&showinfo=0&autohide=1&modestbranding=1" allowfullscreen></iframe></li>
-							</ul>
-							<ul class="gallery-info">
-								<li class="name-cat">
-									<h3>Sweet Memory</h3>
-									<p>Childhood</p>
-								</li>
-								<li class="desc">
-									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro quaerat, ipsum non rem dolore. Sequi, dicta temporibus obcaecati, exercitationem sed nam nobis est! Voluptates quos assumenda a quisquam laborum ipsam.</p>
+									<p></p>
 								</li>
 							</ul>
 						</div>
 					</div>
 					<div class="gallery-grid-item bride-groom">
-						<img src="img/placeholders/1200x800.png" alt="">
+						<img src="https://placeholdit.imgix.net/~text?txtsize=120&txt=Coming+Soon!&w=1200&h=800" alt="">
 						<div class="gallery-hidden">
 							<ul class="image-list">
-								<li><img src="img/blank.png" data-src="http://placehold.it/1200x800" alt=""></li>
-								<li><img src="img/blank.png" data-src="http://placehold.it/1200x800" alt=""></li>
-								<li><img src="img/blank.png" data-src="http://placehold.it/1200x800" alt=""></li>
+								<li><img src="img/blank.png" data-src="https://placeholdit.imgix.net/~text?txtsize=120&txt=Coming+Soon!&w=1200&h=800" alt=""></li>
+								<li><img src="img/blank.png" data-src="https://placeholdit.imgix.net/~text?txtsize=120&txt=Coming+Soon!&w=1200&h=800" alt=""></li>
+								<li><img src="img/blank.png" data-src="https://placeholdit.imgix.net/~text?txtsize=120&txt=Coming+Soon!&w=1200&h=800" alt=""></li>
 							</ul>
 							<ul class="gallery-info">
 								<li class="name-cat">
-									<h3>Sweet Memory</h3>
-									<p>Childhood</p>
+									<h3>Coming Soon!</h3>
+									<p></p>
 								</li>
 								<li class="desc">
-									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident cumque earum mollitia reiciendis fuga doloremque accusamus, vitae fugit nihil repudiandae hic beatae dolorum iure qui, libero maiores quaerat inventore recusandae.</p>
-								</li>
-							</ul>
-						</div>
-					</div>
-					<div class="gallery-grid-item family">
-						<img src="img/placeholders/1200x800.png" alt="">
-						<div class="gallery-hidden">
-							<ul class="video">
-								<li><iframe data-src="https://player.vimeo.com/video/24456787" width="640" height="360" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></li>
-							</ul>
-							<ul class="gallery-info">
-								<li class="name-cat">
-									<h3>Sweet Memory</h3>
-									<p>Childhood</p>
-								</li>
-								<li class="desc">
-									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita explicabo recusandae maiores excepturi impedit eligendi nulla nesciunt, deserunt iusto cum doloribus odit aliquam earum ipsam hic dicta cumque dolores ullam!</p>
-								</li>
-							</ul>
-						</div>
-					</div>
-					<div class="gallery-grid-item dinner">
-						<img src="img/placeholders/1200x800.png" alt="">
-						<div class="gallery-hidden">
-							<ul class="video">
-								<li><iframe width="560" height="315" data-src="http://www.youtube.com/embed/5aOSxep4ni0?rel=0&showinfo=0&autohide=1&modestbranding=1" allowfullscreen></iframe></li>
-							</ul>
-							<ul class="gallery-info">
-								<li class="name-cat">
-									<h3>Sweet Memory</h3>
-									<p>Childhood</p>
-								</li>
-								<li class="desc">
-									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat necessitatibus, pariatur inventore. Voluptate, amet sunt! Deleniti, provident, perspiciatis! Inventore placeat, repellat nobis non velit veniam repellendus aliquid odio neque sunt.</p>
-								</li>
-							</ul>
-						</div>
-					</div>
-					<div class="gallery-grid-item party">
-						<img src="img/placeholders/1200x800.png" alt="">
-						<div class="gallery-hidden">
-							<ul class="image-list">
-								<li><img src="img/blank.png" data-src="http://placehold.it/1200x800" alt=""></li>
-								<li><img src="img/blank.png" data-src="http://placehold.it/1200x800" alt=""></li>
-								<li><img src="img/blank.png" data-src="http://placehold.it/1200x800" alt=""></li>
-							</ul>
-							<ul class="gallery-info">
-								<li class="name-cat">
-									<h3>Sweet Memory</h3>
-									<p>Childhood</p>
-								</li>
-								<li class="desc">
-									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt, corporis, eius! Error sit assumenda hic, ab accusamus quos rem, libero quidem recusandae dolorem, praesentium placeat maiores esse rerum laudantium! Obcaecati.</p>
-								</li>
-							</ul>
-						</div>
-					</div>
-					<div class="gallery-grid-item bride-groom">
-						<img src="img/placeholders/1200x800.png" alt="">
-						<div class="gallery-hidden">
-							<ul class="image-list">
-								<li><img src="img/blank.png" data-src="http://placehold.it/1200x800" alt=""></li>
-								<li><img src="img/blank.png" data-src="http://placehold.it/1200x800" alt=""></li>
-								<li><img src="img/blank.png" data-src="http://placehold.it/1200x800" alt=""></li>
-							</ul>
-							<ul class="gallery-info">
-								<li class="name-cat">
-									<h3>Sweet Memory</h3>
-									<p>Childhood</p>
-								</li>
-								<li class="desc">
-									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, doloremque, nobis. Dicta id reiciendis culpa, facere, asperiores vero repellendus. Cumque repudiandae sed incidunt neque ipsa possimus odit alias mollitia sapiente!</p>
+									<p></p>
 								</li>
 							</ul>
 						</div>
@@ -506,7 +392,7 @@
 			</section>
 
 			<footer>
-				<div class="footer-bg parallax" data-background-image="img/placeholders/1200x800.png" data-parallax-factor=".8"></div>
+				<div class="footer-bg parallax" data-background-image="img/willowickeinnbottom.jpg" data-parallax-factor=".8"></div>
 				<div class="heart">
 					<svg viewBox="0 0 38 35">
 						<use class="shape-heart" xlink:href="img/heart.svg#shape-heart"></use>
