--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 						</div>
 						<div class="col-sm-3">
 							<div class="profile-pic">
-								<img class="img-as-bg" src="https://placeholdit.imgix.net/~text?txtsize=120&txt=Coming+Soon!&w=800&h=800" alt="">
+								<img class="img-as-bg" src="img/people/freda.jpg" alt="">
 							</div>
 							<h4>Freda</h4>
 						</div>
