--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
 							<div class="profile-pic">
 								<img class="img-as-bg" src="img/people/grace.jpg" alt="">
 							</div>
-							<h4>Grace</h4>
+							<h4>Graciela</h4>
 						</div>
 					</div>
 					<h3>Maid/Matron of Honor</h3>
