--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 								<li><span class="lnr lnr-clock"></span>4:00PM - 11:00PM, October 14, 2017</li>
 							</ul>
 							<div class="desc">
-								<p>The blessing will begin on the grounds of Willowick Inn at 4:00PM with dinner to follow.</p>
+								<p>The blessing will begin on the grounds of Willowicke Inn at 4:00PM with dinner to follow.</p>
 							</div>
 							<div class="cta">
 								<!--
@@ -203,17 +203,39 @@
 						<div class="event-details animation-chain" data-animation="fadeInUp">
 							<h3>Hotels</h3>
 							<ul class="event-info">
-							<!--
-								<li><span class="lnr lnr-apartment"></span>TBD <a href="#">[Click Here]</a></li>
-								<li><span class="lnr lnr-apartment"></span>TBD <a href="#">[Click Here]</a></li>
-								<li><span class="lnr lnr-map-marker"></span>TBD <a href="#">[Click Here]</a></li>
-							-->
+								<!--
+									Holiday Inn
+									2209 University Park Dr, Okemos, MI 48864									
+									(517) 349-8700
+									https://goo.gl/maps/ddE6rKZNpKM2
+									https://www.ihg.com/holidayinnexpress/hotels/us/en/okemos/lanok/hoteldetail
+
+									Comfort Inn Okemos
+									2187 University Park Dr, Okemos, MI 48864
+									(517) 347-6690
+									https://goo.gl/maps/fTKZrEUXxV62
+									https://www.choicehotels.com/michigan/okemos/comfort-inn-hotels/mi306
+								-->
+								<li class="header"><span class="lnr lnr-apartment"></span>Holiday Inn Express &amp; Suites (Soon to be a Best Western)</li>
+								<li><span class="lnr lnr-map-marker"></span>2209 University Park Dr, Okemos, MI 48864</li>
+								<li><span class="lnr lnr-phone-handset"></span>517.349.8700</li>
+								<!--
+								<li><span class="lnr lnr-book"></span>Use Code: XXXXXX at <a href="https://www.ihg.com/holidayinnexpress/hotels/us/en/okemos/lanok/hoteldetail">ing.com</a></li>
+								-->
+								<li><br /></li>
+								<li class="header"><span class="lnr lnr-apartment"></span>Comfort Inn</li>
+								<li><span class="lnr lnr-map-marker"></span>2187 University Park Dr, Okemos, MI 48864</li>
+								<li><span class="lnr lnr-phone-handset"></span>517.347.6690</li>
+								<!--
+								<li><span class="lnr lnr-book"></span>Use Code: XXXXXX at <a href="https://www.choicehotels.com/michigan/okemos/comfort-inn-hotels/mi306">choicehotels.com</a></li>
+								-->
 							</ul>
 							<div class="desc">
-							  <p>We are working on finding the best deals near the venue. Check back soon! </p>
-							  <p>&nbsp;</p>
-							  <p>&nbsp;</p>
-							  <p>&nbsp;</p>
+							  <p>Reservations must be made over the phone by <b><u>September 13, 2017</u></b>. 
+							  	Please reference the "Vazquez Hearsch Wedding" when calling.
+								Our wedding rates are available for both Friday &amp; Saturday nights.
+							  </p>
+
 							</div>
 						</div>
 					</li>
