Update wedding time

--- a/index.html
+++ b/index.html
@@ -185,10 +185,10 @@
 							<h3>Wedding Blessing & Reception</h3>
 							<ul class="event-info">
 								<li><span class="lnr lnr-map-marker"></span>Willowicke Inn, 251 Noble Rd, Williamston, MI</li>
-								<li><span class="lnr lnr-clock"></span>4:00PM - 11:00PM, October 14, 2017</li>
+								<li><span class="lnr lnr-clock"></span>4:30PM - 11:00PM, October 14, 2017</li>
 							</ul>
 							<div class="desc">
-								<p>The blessing will begin on the grounds of Willowicke Inn at 4:00PM with dinner to follow.</p>
+								<p>The blessing will begin on the grounds of the Willowicke Inn at 4:30PM with dinner to follow.</p>
 							</div>
 							<div class="cta">
 								<!--
