Updating our images since the invites came out!

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 						<a href="img/carousel/2.jpg" class="item"><img src="img/carousel/2.jpg" alt="" class="img-as-bg"></a>
 						<a href="img/carousel/3.jpg" class="item"><img src="img/carousel/3.jpg" alt="" class="img-as-bg"></a>
 						<a href="img/carousel/4.jpg" class="item"><img src="img/carousel/4.jpg" alt="" class="img-as-bg"></a>
-						<a href="img/carousel/5.png" class="item"><img src="img/carousel/5.png" alt="" class="img-as-bg"></a>
+						<a href="img/carousel/5.png" class="item"><img src="img/carousel/5.jpg" alt="" class="img-as-bg"></a>
 						<a href="img/carousel/6.jpg" class="item"><img src="img/carousel/6.jpg" alt="" class="img-as-bg"></a>
 						<a href="img/carousel/7.jpg" class="item"><img src="img/carousel/7.jpg" alt="" class="img-as-bg"></a>
 						<a href="img/carousel/8.jpg" class="item"><img src="img/carousel/8.jpg" alt="" class="img-as-bg"></a>
